loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:2: error: not found: value estSortie
while (estSortie==false){
       ^Poucet2:14: error: Boolean does not take parameters
 else (nbbiscuit<3){
                   ^